--- a/app/home/welcome.component.html
+++ b/app/home/welcome.component.html
@@ -1,21 +1,12 @@
 ﻿<div class="panel panel-primary">
     <div class="panel-heading">
-        {{pageTitle}}
+        <h2 class="text-center">{{pageTitle}} to Jewels of Nepal Dynamic Products Page</h2>
     </div>
-    <div class="panel-body"  >
-        <div class="row" >
+    <div class="panel-body">
+        <div class="row">
             <img src="./app/assets/images/rusty-cardinal.jpg"
                  class="img-responsive center-block"
                  style="max-height:300px;padding-bottom:50px"/>
-        </div>
-        <div class="row"  >
-            <div class="text-center">Developed by:</div>
-            <h3 class="text-center">Deborah Kurata</h3>
-
-            <div class="text-center">@deborahkurata</div>
-            <div class="text-center">
-                <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
-            </div>
         </div>
     </div>
 </div>
