--- a/app/product/product-menu.component.html
+++ b/app/product/product-menu.component.html
@@ -2,17 +2,17 @@
     <div class="row">
         <div class="col-sm-2">
             <div style="margin-left: 15px;">
-                //select input color
+                <!--select input color-->
                 <select type="string" [(ngModel)]="listFilter">
                     <option [ngValue]="color">COLOR</option>
                     <option *ngFor="let colorType of colorTypes" [ngValue]="colorType.name">{{colorType.name}}</option>
                 </select><br>
-                //select input type
+                <!--select input type-->
                 <select type="string" [(ngModel)]="listFiltertwo">
                     <option [ngValue]="disabled" >TYPE</option>
                     <option *ngFor="let catgType of catgTypes" [ngValue]="catgType.name">{{catgType.name}}</option>
                 </select>
-                //testing two way binding
+                <!--testing two way binding-->
                 <h3>{{listFilter}}</h3>
             </div>
 
